Fixed the crouton issue, made design changes, and fixed the z-index

--- a/public/css/index-nav.css
+++ b/public/css/index-nav.css
@@ -4,7 +4,12 @@ body {
 }
 
 .shared {
-  z-index: 1;
+  z-index: 101;
+}
+
+.navbar-inverse {
+  z-index: 100;
+
 }
 
 div.tooltip{
